fix all the notebooks

--- a/notebooks/03_ShiftAmountActivity.ipynb
+++ b/notebooks/03_ShiftAmountActivity.ipynb
@@ -173,24 +173,50 @@
     {
      "data": {
       "text/html": [
-       "<style  type=\"text/css\" >\n",
-       "</style><table id=\"T_ea211b90_19c4_11eb_8246_0242ac140002\" ><caption>Log of the Transfer MP</caption><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Timestamp</th>        <th class=\"col_heading level0 col1\" >Activity</th>        <th class=\"col_heading level0 col2\" >ActivityState</th>    </tr></thead><tbody>\n",
-       "                <tr>\n",
-       "                        <th id=\"T_ea211b90_19c4_11eb_8246_0242ac140002level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "                        <td id=\"T_ea211b90_19c4_11eb_8246_0242ac140002row0_col0\" class=\"data row0 col0\" >1970-01-01 00:00:00</td>\n",
-       "                        <td id=\"T_ea211b90_19c4_11eb_8246_0242ac140002row0_col1\" class=\"data row0 col1\" >Transfer MP</td>\n",
-       "                        <td id=\"T_ea211b90_19c4_11eb_8246_0242ac140002row0_col2\" class=\"data row0 col2\" >START</td>\n",
-       "            </tr>\n",
-       "            <tr>\n",
-       "                        <th id=\"T_ea211b90_19c4_11eb_8246_0242ac140002level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "                        <td id=\"T_ea211b90_19c4_11eb_8246_0242ac140002row1_col0\" class=\"data row1 col0\" >1970-01-01 00:00:10</td>\n",
-       "                        <td id=\"T_ea211b90_19c4_11eb_8246_0242ac140002row1_col1\" class=\"data row1 col1\" >Transfer MP</td>\n",
-       "                        <td id=\"T_ea211b90_19c4_11eb_8246_0242ac140002row1_col2\" class=\"data row1 col2\" >STOP</td>\n",
-       "            </tr>\n",
-       "    </tbody></table>"
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Activity</th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>ActivityState</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Transfer MP</td>\n",
+       "      <td>1970-01-01 00:00:00</td>\n",
+       "      <td>START</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Transfer MP</td>\n",
+       "      <td>1970-01-01 00:00:10</td>\n",
+       "      <td>STOP</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7f0848194d68>"
+       "      Activity           Timestamp ActivityState\n",
+       "0  Transfer MP 1970-01-01 00:00:00         START\n",
+       "1  Transfer MP 1970-01-01 00:00:10          STOP"
       ]
      },
      "metadata": {},
@@ -199,28 +225,60 @@
     {
      "data": {
       "text/html": [
-       "<style  type=\"text/css\" >\n",
-       "</style><table id=\"T_ea22664e_19c4_11eb_8246_0242ac140002\" ><caption>Log of the Winlocatie</caption><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Timestamp</th>        <th class=\"col_heading level0 col1\" >Activity</th>        <th class=\"col_heading level0 col2\" >ActivityState</th>        <th class=\"col_heading level0 col3\" >container level</th>        <th class=\"col_heading level0 col4\" >geometry</th>    </tr></thead><tbody>\n",
-       "                <tr>\n",
-       "                        <th id=\"T_ea22664e_19c4_11eb_8246_0242ac140002level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "                        <td id=\"T_ea22664e_19c4_11eb_8246_0242ac140002row0_col0\" class=\"data row0 col0\" >1970-01-01 00:00:00</td>\n",
-       "                        <td id=\"T_ea22664e_19c4_11eb_8246_0242ac140002row0_col1\" class=\"data row0 col1\" >Transfer MP</td>\n",
-       "                        <td id=\"T_ea22664e_19c4_11eb_8246_0242ac140002row0_col2\" class=\"data row0 col2\" >START</td>\n",
-       "                        <td id=\"T_ea22664e_19c4_11eb_8246_0242ac140002row0_col3\" class=\"data row0 col3\" >2</td>\n",
-       "                        <td id=\"T_ea22664e_19c4_11eb_8246_0242ac140002row0_col4\" class=\"data row0 col4\" >POINT (4.18055556 52.18664444)</td>\n",
-       "            </tr>\n",
-       "            <tr>\n",
-       "                        <th id=\"T_ea22664e_19c4_11eb_8246_0242ac140002level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "                        <td id=\"T_ea22664e_19c4_11eb_8246_0242ac140002row1_col0\" class=\"data row1 col0\" >1970-01-01 00:00:10</td>\n",
-       "                        <td id=\"T_ea22664e_19c4_11eb_8246_0242ac140002row1_col1\" class=\"data row1 col1\" >Transfer MP</td>\n",
-       "                        <td id=\"T_ea22664e_19c4_11eb_8246_0242ac140002row1_col2\" class=\"data row1 col2\" >STOP</td>\n",
-       "                        <td id=\"T_ea22664e_19c4_11eb_8246_0242ac140002row1_col3\" class=\"data row1 col3\" >0</td>\n",
-       "                        <td id=\"T_ea22664e_19c4_11eb_8246_0242ac140002row1_col4\" class=\"data row1 col4\" >POINT (4.18055556 52.18664444)</td>\n",
-       "            </tr>\n",
-       "    </tbody></table>"
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Activity</th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>ActivityState</th>\n",
+       "      <th>container level</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Transfer MP</td>\n",
+       "      <td>1970-01-01 00:00:00</td>\n",
+       "      <td>START</td>\n",
+       "      <td>2</td>\n",
+       "      <td>POINT (4.18055556 52.18664444)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Transfer MP</td>\n",
+       "      <td>1970-01-01 00:00:10</td>\n",
+       "      <td>STOP</td>\n",
+       "      <td>0</td>\n",
+       "      <td>POINT (4.18055556 52.18664444)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7f0831c25588>"
+       "      Activity           Timestamp ActivityState  container level  \\\n",
+       "0  Transfer MP 1970-01-01 00:00:00         START                2   \n",
+       "1  Transfer MP 1970-01-01 00:00:10          STOP                0   \n",
+       "\n",
+       "                         geometry  \n",
+       "0  POINT (4.18055556 52.18664444)  \n",
+       "1  POINT (4.18055556 52.18664444)  "
       ]
      },
      "metadata": {},
@@ -229,44 +287,80 @@
     {
      "data": {
       "text/html": [
-       "<style  type=\"text/css\" >\n",
-       "</style><table id=\"T_ea23be40_19c4_11eb_8246_0242ac140002\" ><caption>Log of the Hopper 01</caption><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Timestamp</th>        <th class=\"col_heading level0 col1\" >Activity</th>        <th class=\"col_heading level0 col2\" >ActivityState</th>        <th class=\"col_heading level0 col3\" >geometry</th>        <th class=\"col_heading level0 col4\" >container level</th>    </tr></thead><tbody>\n",
-       "                <tr>\n",
-       "                        <th id=\"T_ea23be40_19c4_11eb_8246_0242ac140002level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "                        <td id=\"T_ea23be40_19c4_11eb_8246_0242ac140002row0_col0\" class=\"data row0 col0\" >1970-01-01 00:00:00</td>\n",
-       "                        <td id=\"T_ea23be40_19c4_11eb_8246_0242ac140002row0_col1\" class=\"data row0 col1\" >Transfer MP</td>\n",
-       "                        <td id=\"T_ea23be40_19c4_11eb_8246_0242ac140002row0_col2\" class=\"data row0 col2\" >START</td>\n",
-       "                        <td id=\"T_ea23be40_19c4_11eb_8246_0242ac140002row0_col3\" class=\"data row0 col3\" >POINT (4.18055556 52.18664444)</td>\n",
-       "                        <td id=\"T_ea23be40_19c4_11eb_8246_0242ac140002row0_col4\" class=\"data row0 col4\" >0.000000</td>\n",
-       "            </tr>\n",
-       "            <tr>\n",
-       "                        <th id=\"T_ea23be40_19c4_11eb_8246_0242ac140002level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "                        <td id=\"T_ea23be40_19c4_11eb_8246_0242ac140002row1_col0\" class=\"data row1 col0\" >1970-01-01 00:00:00</td>\n",
-       "                        <td id=\"T_ea23be40_19c4_11eb_8246_0242ac140002row1_col1\" class=\"data row1 col1\" >Transfer MP</td>\n",
-       "                        <td id=\"T_ea23be40_19c4_11eb_8246_0242ac140002row1_col2\" class=\"data row1 col2\" >START</td>\n",
-       "                        <td id=\"T_ea23be40_19c4_11eb_8246_0242ac140002row1_col3\" class=\"data row1 col3\" >POINT (4.18055556 52.18664444)</td>\n",
-       "                        <td id=\"T_ea23be40_19c4_11eb_8246_0242ac140002row1_col4\" class=\"data row1 col4\" >0.000000</td>\n",
-       "            </tr>\n",
-       "            <tr>\n",
-       "                        <th id=\"T_ea23be40_19c4_11eb_8246_0242ac140002level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
-       "                        <td id=\"T_ea23be40_19c4_11eb_8246_0242ac140002row2_col0\" class=\"data row2 col0\" >1970-01-01 00:00:10</td>\n",
-       "                        <td id=\"T_ea23be40_19c4_11eb_8246_0242ac140002row2_col1\" class=\"data row2 col1\" >Transfer MP</td>\n",
-       "                        <td id=\"T_ea23be40_19c4_11eb_8246_0242ac140002row2_col2\" class=\"data row2 col2\" >STOP</td>\n",
-       "                        <td id=\"T_ea23be40_19c4_11eb_8246_0242ac140002row2_col3\" class=\"data row2 col3\" >POINT (4.18055556 52.18664444)</td>\n",
-       "                        <td id=\"T_ea23be40_19c4_11eb_8246_0242ac140002row2_col4\" class=\"data row2 col4\" >2.000000</td>\n",
-       "            </tr>\n",
-       "            <tr>\n",
-       "                        <th id=\"T_ea23be40_19c4_11eb_8246_0242ac140002level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
-       "                        <td id=\"T_ea23be40_19c4_11eb_8246_0242ac140002row3_col0\" class=\"data row3 col0\" >1970-01-01 00:00:10</td>\n",
-       "                        <td id=\"T_ea23be40_19c4_11eb_8246_0242ac140002row3_col1\" class=\"data row3 col1\" >Transfer MP</td>\n",
-       "                        <td id=\"T_ea23be40_19c4_11eb_8246_0242ac140002row3_col2\" class=\"data row3 col2\" >STOP</td>\n",
-       "                        <td id=\"T_ea23be40_19c4_11eb_8246_0242ac140002row3_col3\" class=\"data row3 col3\" >POINT (4.18055556 52.18664444)</td>\n",
-       "                        <td id=\"T_ea23be40_19c4_11eb_8246_0242ac140002row3_col4\" class=\"data row3 col4\" >2.000000</td>\n",
-       "            </tr>\n",
-       "    </tbody></table>"
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Activity</th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>ActivityState</th>\n",
+       "      <th>geometry</th>\n",
+       "      <th>container level</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Transfer MP</td>\n",
+       "      <td>1970-01-01 00:00:00</td>\n",
+       "      <td>START</td>\n",
+       "      <td>POINT (4.18055556 52.18664444)</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Transfer MP</td>\n",
+       "      <td>1970-01-01 00:00:00</td>\n",
+       "      <td>START</td>\n",
+       "      <td>POINT (4.18055556 52.18664444)</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Transfer MP</td>\n",
+       "      <td>1970-01-01 00:00:10</td>\n",
+       "      <td>STOP</td>\n",
+       "      <td>POINT (4.18055556 52.18664444)</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Transfer MP</td>\n",
+       "      <td>1970-01-01 00:00:10</td>\n",
+       "      <td>STOP</td>\n",
+       "      <td>POINT (4.18055556 52.18664444)</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7f08347ec668>"
+       "      Activity           Timestamp ActivityState  \\\n",
+       "0  Transfer MP 1970-01-01 00:00:00         START   \n",
+       "1  Transfer MP 1970-01-01 00:00:00         START   \n",
+       "2  Transfer MP 1970-01-01 00:00:10          STOP   \n",
+       "3  Transfer MP 1970-01-01 00:00:10          STOP   \n",
+       "\n",
+       "                         geometry  container level  \n",
+       "0  POINT (4.18055556 52.18664444)              0.0  \n",
+       "1  POINT (4.18055556 52.18664444)              0.0  \n",
+       "2  POINT (4.18055556 52.18664444)              2.0  \n",
+       "3  POINT (4.18055556 52.18664444)              2.0  "
       ]
      },
      "metadata": {},
