--- a/notebooks/10_Process_synchronization_example.ipynb
+++ b/notebooks/10_Process_synchronization_example.ipynb
@@ -111,58 +111,58 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Timestamp</th>\n",
        "      <th>Activity</th>\n",
+       "      <th>Timestamp</th>\n",
        "      <th>ActivityState</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1970-01-01 00:00:00</td>\n",
        "      <td>Reporting activity</td>\n",
+       "      <td>1970-01-01 00:00:00</td>\n",
        "      <td>START</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1970-01-01 00:00:00</td>\n",
        "      <td>Activity1</td>\n",
+       "      <td>1970-01-01 00:00:00</td>\n",
        "      <td>START</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1970-01-01 00:00:00</td>\n",
        "      <td>Activity2</td>\n",
+       "      <td>1970-01-01 00:00:00</td>\n",
        "      <td>WAIT_START</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1970-01-01 00:00:00</td>\n",
        "      <td>Reporting activity</td>\n",
+       "      <td>1970-01-01 00:00:00</td>\n",
        "      <td>STOP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1970-01-01 00:00:14</td>\n",
        "      <td>Activity1</td>\n",
+       "      <td>1970-01-01 00:00:14</td>\n",
        "      <td>STOP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>1970-01-01 00:00:14</td>\n",
        "      <td>Activity2</td>\n",
+       "      <td>1970-01-01 00:00:14</td>\n",
        "      <td>WAIT_STOP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>1970-01-01 00:00:14</td>\n",
        "      <td>Activity2</td>\n",
+       "      <td>1970-01-01 00:00:14</td>\n",
        "      <td>START</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>1970-01-01 00:00:44</td>\n",
        "      <td>Activity2</td>\n",
+       "      <td>1970-01-01 00:00:44</td>\n",
        "      <td>STOP</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -170,15 +170,15 @@
        "</div>"
       ],
       "text/plain": [
-       "            Timestamp            Activity ActivityState\n",
-       "0 1970-01-01 00:00:00  Reporting activity         START\n",
-       "1 1970-01-01 00:00:00           Activity1         START\n",
-       "2 1970-01-01 00:00:00           Activity2    WAIT_START\n",
-       "3 1970-01-01 00:00:00  Reporting activity          STOP\n",
-       "4 1970-01-01 00:00:14           Activity1          STOP\n",
-       "5 1970-01-01 00:00:14           Activity2     WAIT_STOP\n",
-       "6 1970-01-01 00:00:14           Activity2         START\n",
-       "7 1970-01-01 00:00:44           Activity2          STOP"
+       "             Activity           Timestamp ActivityState\n",
+       "0  Reporting activity 1970-01-01 00:00:00         START\n",
+       "1           Activity1 1970-01-01 00:00:00         START\n",
+       "2           Activity2 1970-01-01 00:00:00    WAIT_START\n",
+       "3  Reporting activity 1970-01-01 00:00:00          STOP\n",
+       "4           Activity1 1970-01-01 00:00:14          STOP\n",
+       "5           Activity2 1970-01-01 00:00:14     WAIT_STOP\n",
+       "6           Activity2 1970-01-01 00:00:14         START\n",
+       "7           Activity2 1970-01-01 00:00:44          STOP"
       ]
      },
      "metadata": {},
