--- a/notebooks/11_Complex_synchronization_example.ipynb
+++ b/notebooks/11_Complex_synchronization_example.ipynb
@@ -175,114 +175,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<style  type=\"text/css\" >\n",
-       "</style><table id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002\" ><caption>Log of the Reporting activity</caption><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Timestamp</th>        <th class=\"col_heading level0 col1\" >Activity</th>        <th class=\"col_heading level0 col2\" >ActivityState</th>    </tr></thead><tbody>\n",
-       "                <tr>\n",
-       "                        <th id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row0_col0\" class=\"data row0 col0\" >1970-01-01 00:00:00</td>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row0_col1\" class=\"data row0 col1\" >Reporting activity</td>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row0_col2\" class=\"data row0 col2\" >START</td>\n",
-       "            </tr>\n",
-       "            <tr>\n",
-       "                        <th id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row1_col0\" class=\"data row1 col0\" >1970-01-01 00:00:00</td>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row1_col1\" class=\"data row1 col1\" >A Basic activity1</td>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row1_col2\" class=\"data row1 col2\" >START</td>\n",
-       "            </tr>\n",
-       "            <tr>\n",
-       "                        <th id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row2_col0\" class=\"data row2 col0\" >1970-01-01 00:00:00</td>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row2_col1\" class=\"data row2 col1\" >B Basic activity1</td>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row2_col2\" class=\"data row2 col2\" >START</td>\n",
-       "            </tr>\n",
-       "            <tr>\n",
-       "                        <th id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row3_col0\" class=\"data row3 col0\" >1970-01-01 00:00:00</td>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row3_col1\" class=\"data row3 col1\" >Reporting activity</td>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row3_col2\" class=\"data row3 col2\" >STOP</td>\n",
-       "            </tr>\n",
-       "            <tr>\n",
-       "                        <th id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row4_col0\" class=\"data row4 col0\" >1970-01-01 00:00:01</td>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row4_col1\" class=\"data row4 col1\" >B Basic activity1</td>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row4_col2\" class=\"data row4 col2\" >STOP</td>\n",
-       "            </tr>\n",
-       "            <tr>\n",
-       "                        <th id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row5_col0\" class=\"data row5 col0\" >1970-01-01 00:00:01</td>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row5_col1\" class=\"data row5 col1\" >B Basic activity2</td>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row5_col2\" class=\"data row5 col2\" >START</td>\n",
-       "            </tr>\n",
-       "            <tr>\n",
-       "                        <th id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002level0_row6\" class=\"row_heading level0 row6\" >6</th>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row6_col0\" class=\"data row6 col0\" >1970-01-01 00:00:14</td>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row6_col1\" class=\"data row6 col1\" >A Basic activity1</td>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row6_col2\" class=\"data row6 col2\" >STOP</td>\n",
-       "            </tr>\n",
-       "            <tr>\n",
-       "                        <th id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002level0_row7\" class=\"row_heading level0 row7\" >7</th>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row7_col0\" class=\"data row7 col0\" >1970-01-01 00:00:14</td>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row7_col1\" class=\"data row7 col1\" >A Basic activity2</td>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row7_col2\" class=\"data row7 col2\" >START</td>\n",
-       "            </tr>\n",
-       "            <tr>\n",
-       "                        <th id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002level0_row8\" class=\"row_heading level0 row8\" >8</th>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row8_col0\" class=\"data row8 col0\" >1970-01-01 00:00:24</td>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row8_col1\" class=\"data row8 col1\" >A Basic activity2</td>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row8_col2\" class=\"data row8 col2\" >STOP</td>\n",
-       "            </tr>\n",
-       "            <tr>\n",
-       "                        <th id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002level0_row9\" class=\"row_heading level0 row9\" >9</th>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row9_col0\" class=\"data row9 col0\" >1970-01-01 00:00:24</td>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row9_col1\" class=\"data row9 col1\" >A Basic activity3</td>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row9_col2\" class=\"data row9 col2\" >WAIT_START</td>\n",
-       "            </tr>\n",
-       "            <tr>\n",
-       "                        <th id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002level0_row10\" class=\"row_heading level0 row10\" >10</th>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row10_col0\" class=\"data row10 col0\" >1970-01-01 00:08:21</td>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row10_col1\" class=\"data row10 col1\" >B Basic activity2</td>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row10_col2\" class=\"data row10 col2\" >STOP</td>\n",
-       "            </tr>\n",
-       "            <tr>\n",
-       "                        <th id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002level0_row11\" class=\"row_heading level0 row11\" >11</th>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row11_col0\" class=\"data row11 col0\" >1970-01-01 00:08:21</td>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row11_col1\" class=\"data row11 col1\" >A Basic activity3</td>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row11_col2\" class=\"data row11 col2\" >WAIT_STOP</td>\n",
-       "            </tr>\n",
-       "            <tr>\n",
-       "                        <th id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002level0_row12\" class=\"row_heading level0 row12\" >12</th>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row12_col0\" class=\"data row12 col0\" >1970-01-01 00:08:21</td>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row12_col1\" class=\"data row12 col1\" >A Basic activity3</td>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row12_col2\" class=\"data row12 col2\" >START</td>\n",
-       "            </tr>\n",
-       "            <tr>\n",
-       "                        <th id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002level0_row13\" class=\"row_heading level0 row13\" >13</th>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row13_col0\" class=\"data row13 col0\" >1970-01-01 00:08:21</td>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row13_col1\" class=\"data row13 col1\" >B Basic activity3</td>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row13_col2\" class=\"data row13 col2\" >START</td>\n",
-       "            </tr>\n",
-       "            <tr>\n",
-       "                        <th id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002level0_row14\" class=\"row_heading level0 row14\" >14</th>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row14_col0\" class=\"data row14 col0\" >1970-01-01 00:10:21</td>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row14_col1\" class=\"data row14 col1\" >B Basic activity3</td>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row14_col2\" class=\"data row14 col2\" >STOP</td>\n",
-       "            </tr>\n",
-       "            <tr>\n",
-       "                        <th id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002level0_row15\" class=\"row_heading level0 row15\" >15</th>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row15_col0\" class=\"data row15 col0\" >1970-01-01 00:12:01</td>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row15_col1\" class=\"data row15 col1\" >A Basic activity3</td>\n",
-       "                        <td id=\"T_08e0477a_19cc_11eb_99ba_0242ac140002row15_col2\" class=\"data row15 col2\" >STOP</td>\n",
-       "            </tr>\n",
-       "    </tbody></table>"
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Activity</th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>ActivityState</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Reporting activity</td>\n",
+       "      <td>1970-01-01 00:00:00</td>\n",
+       "      <td>START</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A Basic activity1</td>\n",
+       "      <td>1970-01-01 00:00:00</td>\n",
+       "      <td>START</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>B Basic activity1</td>\n",
+       "      <td>1970-01-01 00:00:00</td>\n",
+       "      <td>START</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Reporting activity</td>\n",
+       "      <td>1970-01-01 00:00:00</td>\n",
+       "      <td>STOP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>B Basic activity1</td>\n",
+       "      <td>1970-01-01 00:00:01</td>\n",
+       "      <td>STOP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>B Basic activity2</td>\n",
+       "      <td>1970-01-01 00:00:01</td>\n",
+       "      <td>START</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>A Basic activity1</td>\n",
+       "      <td>1970-01-01 00:00:14</td>\n",
+       "      <td>STOP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>A Basic activity2</td>\n",
+       "      <td>1970-01-01 00:00:14</td>\n",
+       "      <td>START</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>A Basic activity2</td>\n",
+       "      <td>1970-01-01 00:00:24</td>\n",
+       "      <td>STOP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>A Basic activity3</td>\n",
+       "      <td>1970-01-01 00:00:24</td>\n",
+       "      <td>WAIT_START</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>B Basic activity2</td>\n",
+       "      <td>1970-01-01 00:08:21</td>\n",
+       "      <td>STOP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>A Basic activity3</td>\n",
+       "      <td>1970-01-01 00:08:21</td>\n",
+       "      <td>WAIT_STOP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>A Basic activity3</td>\n",
+       "      <td>1970-01-01 00:08:21</td>\n",
+       "      <td>START</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>B Basic activity3</td>\n",
+       "      <td>1970-01-01 00:08:21</td>\n",
+       "      <td>START</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>B Basic activity3</td>\n",
+       "      <td>1970-01-01 00:10:21</td>\n",
+       "      <td>STOP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>A Basic activity3</td>\n",
+       "      <td>1970-01-01 00:12:01</td>\n",
+       "      <td>STOP</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7fb37f5df908>"
+       "              Activity           Timestamp ActivityState\n",
+       "0   Reporting activity 1970-01-01 00:00:00         START\n",
+       "1    A Basic activity1 1970-01-01 00:00:00         START\n",
+       "2    B Basic activity1 1970-01-01 00:00:00         START\n",
+       "3   Reporting activity 1970-01-01 00:00:00          STOP\n",
+       "4    B Basic activity1 1970-01-01 00:00:01          STOP\n",
+       "5    B Basic activity2 1970-01-01 00:00:01         START\n",
+       "6    A Basic activity1 1970-01-01 00:00:14          STOP\n",
+       "7    A Basic activity2 1970-01-01 00:00:14         START\n",
+       "8    A Basic activity2 1970-01-01 00:00:24          STOP\n",
+       "9    A Basic activity3 1970-01-01 00:00:24    WAIT_START\n",
+       "10   B Basic activity2 1970-01-01 00:08:21          STOP\n",
+       "11   A Basic activity3 1970-01-01 00:08:21     WAIT_STOP\n",
+       "12   A Basic activity3 1970-01-01 00:08:21         START\n",
+       "13   B Basic activity3 1970-01-01 00:08:21         START\n",
+       "14   B Basic activity3 1970-01-01 00:10:21          STOP\n",
+       "15   A Basic activity3 1970-01-01 00:12:01          STOP"
       ]
      },
      "metadata": {},
