--- a/notebooks/16_cutters and barges (BUG IN RESERVATIONS).ipynb
+++ b/notebooks/16_cutters and barges (BUG IN RESERVATIONS).ipynb
@@ -209,7 +209,7 @@
     "    \"env\": my_env,\n",
     "    \"name\": \"while_1\",\n",
     "    \"registry\": registry,\n",
-    "    \"sub_process\": activity,\n",
+    "    \"sub_processes\": [activity],\n",
     "    \"condition_event\": [{\"type\":\"container\", \"concept\": to_site, \"state\":\"full\"}],\n",
     "    \"postpone_start\": False,\n",
     "})"
@@ -276,7 +276,7 @@
     "    \"name\": \"while_2\",\n",
     "    \"env\": my_env,\n",
     "    \"registry\": registry,\n",
-    "    \"sub_process\": activity,\n",
+    "    \"sub_processes\": [activity],\n",
     "    \"condition_event\": [{\"type\":\"container\", \"concept\": to_site, \"state\":\"full\"}],\n",
     "    \"postpone_start\": False,\n",
     "})"
@@ -313,6 +313,20 @@
     "\n",
     "print(f\"Level of the to_site: {to_site.container.get_level()}, Capacity of the to_site {to_site.container.get_capacity()}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
