--- a/notebooks/01_BasicActivity_example.ipynb
+++ b/notebooks/01_BasicActivity_example.ipynb
@@ -90,22 +90,22 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Timestamp</th>\n",
        "      <th>Activity</th>\n",
+       "      <th>Timestamp</th>\n",
        "      <th>ActivityState</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1970-01-01 00:00:00</td>\n",
        "      <td>Basic activity</td>\n",
+       "      <td>1970-01-01 00:00:00</td>\n",
        "      <td>START</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1970-01-01 00:00:14</td>\n",
        "      <td>Basic activity</td>\n",
+       "      <td>1970-01-01 00:00:14</td>\n",
        "      <td>STOP</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -113,9 +113,9 @@
        "</div>"
       ],
       "text/plain": [
-       "            Timestamp        Activity ActivityState\n",
-       "0 1970-01-01 00:00:00  Basic activity         START\n",
-       "1 1970-01-01 00:00:14  Basic activity          STOP"
+       "         Activity           Timestamp ActivityState\n",
+       "0  Basic activity 1970-01-01 00:00:00         START\n",
+       "1  Basic activity 1970-01-01 00:00:14          STOP"
       ]
      },
      "execution_count": 4,
@@ -199,22 +199,22 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Timestamp</th>\n",
        "      <th>Activity</th>\n",
+       "      <th>Timestamp</th>\n",
        "      <th>ActivityState</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1970-01-01 00:00:00</td>\n",
        "      <td>Basic activity</td>\n",
+       "      <td>1970-01-01 00:00:00</td>\n",
        "      <td>START</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1970-01-01 00:00:14</td>\n",
        "      <td>Basic activity</td>\n",
+       "      <td>1970-01-01 00:00:14</td>\n",
        "      <td>STOP</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -222,9 +222,9 @@
        "</div>"
       ],
       "text/plain": [
-       "            Timestamp        Activity ActivityState\n",
-       "0 1970-01-01 00:00:00  Basic activity         START\n",
-       "1 1970-01-01 00:00:14  Basic activity          STOP"
+       "         Activity           Timestamp ActivityState\n",
+       "0  Basic activity 1970-01-01 00:00:00         START\n",
+       "1  Basic activity 1970-01-01 00:00:14          STOP"
       ]
      },
      "execution_count": 6,
