--- a/notebooks/09_MultiContainer.ipynb
+++ b/notebooks/09_MultiContainer.ipynb
@@ -200,8 +200,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Timestamp</th>\n",
        "      <th>Activity</th>\n",
+       "      <th>Timestamp</th>\n",
        "      <th>ActivityState</th>\n",
        "      <th>geometry</th>\n",
        "      <th>container level</th>\n",
@@ -210,32 +210,32 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1970-01-01 00:00:00</td>\n",
        "      <td>Transfer MP</td>\n",
+       "      <td>1970-01-01 00:00:00</td>\n",
        "      <td>START</td>\n",
        "      <td>POINT (4.18055556 52.18664444)</td>\n",
        "      <td>{'MP': 0, 'TP': 0}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1970-01-01 00:00:00</td>\n",
        "      <td>Transfer MP</td>\n",
+       "      <td>1970-01-01 00:00:00</td>\n",
        "      <td>START</td>\n",
        "      <td>POINT (4.18055556 52.18664444)</td>\n",
        "      <td>{'MP': 0, 'TP': 0}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1970-01-01 00:00:20</td>\n",
        "      <td>Transfer MP</td>\n",
+       "      <td>1970-01-01 00:00:20</td>\n",
        "      <td>STOP</td>\n",
        "      <td>POINT (4.18055556 52.18664444)</td>\n",
        "      <td>{'TP': 0, 'MP': 1}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1970-01-01 00:00:20</td>\n",
        "      <td>Transfer MP</td>\n",
+       "      <td>1970-01-01 00:00:20</td>\n",
        "      <td>STOP</td>\n",
        "      <td>POINT (4.18055556 52.18664444)</td>\n",
        "      <td>{'TP': 0, 'MP': 1}</td>\n",
@@ -245,11 +245,11 @@
        "</div>"
       ],
       "text/plain": [
-       "            Timestamp     Activity ActivityState  \\\n",
-       "0 1970-01-01 00:00:00  Transfer MP         START   \n",
-       "1 1970-01-01 00:00:00  Transfer MP         START   \n",
-       "2 1970-01-01 00:00:20  Transfer MP          STOP   \n",
-       "3 1970-01-01 00:00:20  Transfer MP          STOP   \n",
+       "      Activity           Timestamp ActivityState  \\\n",
+       "0  Transfer MP 1970-01-01 00:00:00         START   \n",
+       "1  Transfer MP 1970-01-01 00:00:00         START   \n",
+       "2  Transfer MP 1970-01-01 00:00:20          STOP   \n",
+       "3  Transfer MP 1970-01-01 00:00:20          STOP   \n",
        "\n",
        "                         geometry     container level  \n",
        "0  POINT (4.18055556 52.18664444)  {'MP': 0, 'TP': 0}  \n",
@@ -282,22 +282,22 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Timestamp</th>\n",
        "      <th>Activity</th>\n",
+       "      <th>Timestamp</th>\n",
        "      <th>ActivityState</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1970-01-01 00:00:00</td>\n",
        "      <td>Transfer MP</td>\n",
+       "      <td>1970-01-01 00:00:00</td>\n",
        "      <td>START</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1970-01-01 00:00:20</td>\n",
        "      <td>Transfer MP</td>\n",
+       "      <td>1970-01-01 00:00:20</td>\n",
        "      <td>STOP</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -305,9 +305,9 @@
        "</div>"
       ],
       "text/plain": [
-       "            Timestamp     Activity ActivityState\n",
-       "0 1970-01-01 00:00:00  Transfer MP         START\n",
-       "1 1970-01-01 00:00:20  Transfer MP          STOP"
+       "      Activity           Timestamp ActivityState\n",
+       "0  Transfer MP 1970-01-01 00:00:00         START\n",
+       "1  Transfer MP 1970-01-01 00:00:20          STOP"
       ]
      },
      "metadata": {},
